<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="str_game_name_fmt">%1$s (%2$s)</string>
    <string name="robot_name_fmt">%1$s (robot)</string>
    <string name="invitee_fmt">(%1$s invited)</string>
    <string name="missing_player">(not here yet…)</string>
    <string name="summary_invites_out">Players invited</string>
    <string name="summary_invites_out_fmt">Players invited to room “%1$s”</string>
    <string name="gameOver">Game over</string>
    <plurals name="moves_fmt">
        <item quantity="one">One move played</item>
        <item quantity="other">%1$d moves played</item>
    </plurals>
    <string name="button_delete">Delete</string>
    <string name="button_delete_game">Delete Game</string>
    <string name="button_reset">Reset</string>
    <string name="gamel_menu_dicts">Wordlists</string>
    <string name="menu_prefs">App Settings</string>
    <string name="board_menu_file_about">About CrossWords</string>
    <string name="list_item_config">Game settings</string>
    <string name="list_item_rename">Rename</string>
    <string name="list_item_move">Move to group</string>
    <string name="list_item_delete">Delete game</string>
    <string name="list_item_reset">Reset\u200C</string>
    <string name="list_item_copy">Copy</string>
    <string name="list_item_netstats">Connections</string>
    <string name="list_item_relaypage">Game traffic</string>
    <string name="relaypage_url_copied">Game URL copied to clipboard</string>
    <string name="rename_label">Change the name of this game to:</string>
    <string name="rename_label_caveat">Change the name of this game
    (on this device only) to:</string>
    <plurals name="confirm_seldeletes_fmt">
        <item quantity="one">Are you sure you want to delete
      the selected game? This action cannot be undone.</item>
        <item quantity="other">Are you sure you want to delete
      the %1$d selected games? This action cannot be undone.</item>
    </plurals>
    <plurals name="confirm_nameddeletes_fmt">
      <item quantity="one">Are you sure you want to delete
      the game %1$s? This action cannot be undone.</item>
      <item quantity="other">Are you sure you want to delete
      the games %1$s? This action cannot be undone.</item>
    </plurals>
    <string name="confirm_del_after_rematch_fmt">Rematch
    successful.\n\nDo you now want to delete the completed game %1$s?
    \n\n(This action cannot be undone.)</string>
    <plurals name="confirm_reset_fmt">
        <item quantity="one">Are you sure you want to reset the
      selected game?\n\n(Resetting erases all moves and any connection
      information.)</item>
        <item quantity="other">Are you sure you want to reset the %1$d
      selected games?\n\n(Resetting erases all moves and any connection
      information.)</item>
    </plurals>
    <string name="download_more">Download more</string>
    <string name="loc_builtin">Built-in</string>
    <string name="loc_downloads">Downloads</string>
    <string name="dicts_item_move">Change storage location</string>
    <string name="dicts_item_select">Make default</string>
    <plurals name="confirm_delete_dict_fmt">
        <item quantity="one">Are you sure you want to delete the
      wordlist %1$s?</item>
        <item quantity="other">Are you sure you want to delete the
      wordlists %1$s?</item>
    </plurals>
    <string name="confirm_deleteonly_dicts_fmt">Deleting %1$s will
        leave you without any %2$s wordlists. One or more games will be
        unopenable (until you download a replacement list.)</string>
    <string name="set_default_message_fmt">For what players should the
    wordlist %1$s be the default for new games? (The language %2$s will be
    the default for both.)</string>
    <string name="button_default_human">Human</string>
    <string name="button_default_robot">Robot</string>
    <string name="button_default_both">Both</string>
    <string name="move_dict_fmt">Location for wordlist %1$s</string>
    <string name="loc_internal">Internal</string>
    <string name="loc_external">External</string>
    <string name="title_game_config_fmt">Settings for %1$s</string>
    <string name="title_gamenet_config_fmt">%1$s settings (networked)</string>
    <string name="title_langs_list">Languages (based on installed
      wordlists)</string>
    <string name="game_locked">Lock settings</string>
    <string name="players_label_standalone">Players (tap to edit)</string>
    <string name="button_add_player">Add player</string>
    <string name="button_juggle_players">Shuffle players</string>
    <string name="lang_label">Game language</string>
    <string name="langdict_label">Game language/wordlist</string>
    <string name="langUnknownFmt">Unknown (%1$s)</string>
    <string name="connect_label_fmt">Connection (via %1$s)</string>
    <string name="settings_label">Other settings</string>
    <string name="hints_allowed">Allow hints</string>
    <string name="nethints_allowed">Allow hints (networked)</string>
    <string name="use_timer">Enable game timer</string>
    <string name="use_duptimer">Enable per-move timer</string>
    <string name="minutes_label">Minutes per player</string>
    <string name="dup_minutes_label">Minutes per turn</string>
    <string name="robot_iq_label">Robot IQ</string>
    <string name="phonies_label">Phonies</string>
    <string name="robot_spinner_prompt">How smart should the robot player be?</string>
    <string name="robot_smart">Smart robot</string>
    <string name="robot_smarter">Smarter robot</string>
    <string name="robot_smartest">Smartest robot</string>
    <string name="phonies_spinner_prompt">How to handle “phonies”
        (words not in wordlist)</string>
    <string name="phonies_ignore">Ignore phonies</string>
    <string name="robot_label">Robot player</string>
    <string name="button_trade_commit">Commit trade</string>
    <string name="button_trade_cancel">Cancel trade</string>
    <string name="board_menu_trade">Trade</string>
    <string name="board_menu_undo_last">Undo last</string>
    <string name="board_submenu_game">Game</string>
    <string name="board_menu_game_counts">Counts and values</string>
    <string name="board_menu_game_left">Tiles remaining</string>
    <string name="board_menu_game_history">Game history</string>
    <string name="board_menu_game_resign">Resign</string>
    <string name="board_menu_game_resend">Resend moves</string>
    <string name="title_prefs">CrossWords Settings</string>
    <string name="prefs_defaults">New game defaults</string>
    <string name="prefs_defaults_summary">Default settings for new
        games</string>
    <string name="prefs_names">Player names</string>
    <string name="prefs_names_summary">Default player names</string>
    <string name="pref_human_name">Human player (your name)</string>
    <string name="prefs_appearance">Appearance</string>
    <string name="prefs_appearance_summary">Settings controlling
        appearance</string>
    <string name="prefs_behavior">Behavior</string>
    <string name="prefs_behavior_summary">Settings controlling app behavior</string>
    <string name="explain_robot">Explain other moves</string>
    <string name="explain_robot_summary">Display score summary after
        every robot or remote turn</string>
    <string name="skip_confirm_turn">Skip confirming turn</string>
    <string name="skip_confirm_turn_summary">Do NOT display score
        summary after every human turn</string>
    <string name="title_sort_tiles">Sort new tiles</string>
    <string name="summary_sort_tiles">Sort racks whenever new tiles
      are added</string>
    <string name="peek_other">View tiles out-of-turn</string>
    <string name="peek_other_summary">Tapping on scoreboard name shows
        that player’s tiles</string>
    <string name="hide_crosshairs">Disable crosshairs</string>
    <string name="hide_crosshairs_summary">Do not show which board
    cell is touched</string>
    <string name="network_behavior">Network game settings</string>
    <string name="network_behavior_summary">Settings that apply to
        networked games</string>
    <string name="notify_sound">Play sound</string>
    <string name="notify_other_summary">When opponent moves arrive</string>
    <string name="button_newgroup">New group</string>
    <string name="tiles_header_face">Letter</string>
    <string name="tiles_header_count">Number</string>
    <string name="tiles_header_value">Value</string>
    <string name="board_menu_file_email">Email author</string>
    <string name="gamel_menu_checkupdates">Check for updates</string>
    <string name="default_loc">Store wordlists internally</string>
    <string name="default_loc_summary">(Not in external/sdcard memory)</string>
    <string name="list_group_delete">Delete group</string>
    <string name="list_group_rename">Rename group</string>
    <string name="list_group_default">Put new games here</string>
    <string name="list_group_moveup">Move up</string>
    <string name="list_group_movedown">Move down</string>
    <string name="button_rematch">Rematch</string>
    <string name="button_archive">Archive\u200C</string>
    <string name="menu_rateme">Rate CrossWords</string>
    <string name="title_studyon">Enable studylists</string>
    <string name="summary_studyon">Offer to add to and display lists
    of words to remember</string>
    <string name="gamel_menu_study">Studylist</string>
    <string name="new_game">New one-device game</string>
    <string name="new_game_networked">New networked game</string>
    <string name="disable_nags_title">Turn reminders</string>
    <string name="advanced">For debugging</string>
    <string name="advanced_summary">You should never need these…</string>
    <string name="board_menu_game_netstats">Network stats</string>
    <string name="gamel_menu_writegit">Copy git info to clipboard</string>
    <string name="enable_sms_toself_title">Short-circuit Data SMS to self</string>
    <string name="enable_sms_toself_summary">Skip radio when phone numbers same</string>
    <string name="force_radio_title">Pretend to have radio</string>
    <string name="radio_name_real">Don’t pretend</string>
    <string name="pref_group_sms_title">Data SMS Stuff</string>
    <string name="pref_group_sms_summary">Prefs related to play-via-sms</string>
    <string name="show_sms_title">Show Data SMS sends, receives</string>
    <string name="list_item_select">Select</string>
    <string name="list_item_deselect">De-select</string>
    <string name="list_item_markbad">Mark corrupt</string>
    <string name="board_menu_game_pause">Pause</string>
    <string name="board_menu_game_unpause">Un-pause</string>
    <string name="pause_save_msg">Remember message</string>
    <string name="pause_forget_msg">Forget message</string>
    <string name="pause_expl_hint">Why I’m doing this</string>
    <string name="gamel_menu_logs">Debug logs</string>
    <string name="gamel_menu_logstore_on">Enable log storage</string>
    <string name="gamel_menu_logstore_off">Disable log storage</string>
    <string name="gamel_menu_logstore_clear">Clear stored logs</string>
    <string name="gamel_menu_knownplyrs">Known Players</string>
    <string name="button_settings">Settings</string>
    <string name="gamel_menu_storedb">Export app data</string>
    <string name="gamel_menu_loaddb">Import app data</string>
  <string name="ksconfig_expl">For the best experience with networked
  games, CrossWords can try to remain active in the background
  checking for incoming moves. This may reduce battery life, which is
  why Android discourages it, and why you will always see a
  notification when it is happening.
  </string>
  <string name="hide_notify_expl">If you get tired of seeing the
  notification you can use your device’s Settings app to hide it. Get
  there with the button below.</string>
  <string name="hide_notify_button">Go to “Show notifications”</string>
</resources>