<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <!-- Remove this once dualpane is well tested -->
    <item android:id="@+id/games_menu_newgame_solo"
          android:title="@string/new_game"
          android:icon="@drawable/content_new_solo__gen"
          android:showAsAction="ifRoom"
          />
    <item android:id="@+id/games_menu_newgame_net"
          android:title="@string/new_game_networked"
          android:icon="@drawable/content_new_net__gen"
          android:showAsAction="ifRoom"
          />
    <item android:id="@+id/games_menu_newgroup"
          android:title="@string/button_newgroup"
          android:icon="@drawable/new_group__gen"
          android:showAsAction="ifRoom"
          />
    <item android:id="@+id/games_menu_prefs"
          android:title="@string/menu_prefs"
          android:icon="@drawable/prefs__gen"
          android:showAsAction="ifRoom"
          />

    <item android:id="@+id/games_menu_rateme"
          android:title="@string/menu_rateme"
          />

    <item android:id="@+id/games_menu_dicts"
          android:title="@string/gamel_menu_dicts"
          android:icon="@drawable/dict__gen"
          android:showAsAction="ifRoom"
          />
    <item android:id="@+id/games_menu_study"
          android:title="@string/gamel_menu_study"
          />
    <item android:id="@+id/games_menu_knownplyrs"
          android:title="@string/gamel_menu_knownplyrs"
          />
    <item android:id="@+id/games_menu_about"
          android:title="@string/board_menu_file_about"
          android:icon="@android:drawable/ic_menu_info_details"
          />
    <item android:id="@+id/games_menu_email"
          android:title="@string/board_menu_file_email"
          android:icon="@drawable/email__gen"
          android:showAsAction="ifRoom"
          />
    <item android:id="@+id/games_menu_resend"
          android:title="@string/board_menu_game_resend"
          />
    <item android:id="@+id/games_menu_checkmoves"
          android:title="@string/gamel_menu_checkmoves"
          android:icon="@drawable/stat_notify_sync"
          />

    <!-- Game items -->
    <item android:id="@+id/games_game_delete"
          android:title="@string/list_item_delete"
          android:icon="@drawable/content_discard__gen"
          android:showAsAction="ifRoom"
          />
    <item android:id="@+id/games_game_rematch"
          android:title="@string/button_rematch"
          />
    <item android:id="@+id/games_game_config"
          android:title="@string/list_item_config"
          android:icon="@drawable/content_edit"
          android:showAsAction="ifRoom"
          />
    <item android:id="@+id/games_game_move"
          android:title="@string/list_item_move"
          android:icon="@drawable/relabel__gen"
          android:showAsAction="ifRoom"
          />
    <item android:id="@+id/games_game_reset"
          android:title="@string/list_item_reset"
          android:icon="@drawable/reset__gen"
          android:showAsAction="ifRoom"
          />
    <item android:id="@+id/games_game_new_from"
          android:title="@string/list_item_new_from"
          />
    <item android:id="@+id/games_game_rename"
          android:title="@string/list_item_rename"
          />
    <item android:id="@+id/games_game_copy"
          android:title="@string/list_item_copy"
          />

    <!-- Group items -->
    <item android:id="@+id/games_group_moveup"
          android:title="@string/list_group_moveup"
          android:showAsAction="ifRoom"
          />
    <item android:id="@+id/games_group_movedown"
          android:title="@string/list_group_movedown"
          android:showAsAction="ifRoom"
          />
    <item android:id="@+id/games_group_delete"
          android:title="@string/list_group_delete"
          android:icon="@drawable/content_discard__gen"
          android:showAsAction="ifRoom"
          />
    <item android:id="@+id/games_group_default"
          android:title="@string/list_group_default"
          />
    <item android:id="@+id/games_group_rename"
          android:title="@string/list_group_rename"
          />

    <!-- Debug only menuitems -->
    <item android:id="@+id/games_menu_checkupdates"
          android:title="@string/gamel_menu_checkupdates"
          />
    <item android:id="@+id/games_menu_storedb"
          android:title="@string/gamel_menu_storedb"
          />
    <item android:id="@+id/games_menu_loaddb"
          android:title="@string/gamel_menu_loaddb"
          />
    <item android:id="@+id/games_menu_writegit"
          android:title="@string/gamel_menu_writegit"
          />

    <item android:id="@+id/games_submenu_logs"
          android:title="@string/gamel_menu_logs"
          >
      <menu>
        <item android:id="@+id/games_menu_enableLogStorage"
              android:title="@string/gamel_menu_logstore_on"
              />
        <item android:id="@+id/games_menu_disableLogStorage"
              android:title="@string/gamel_menu_logstore_off"
              />
        <item android:id="@+id/games_menu_dumpLogStorage"
              android:title="@string/gamel_menu_logstore_dump"
              />
        <item android:id="@+id/games_menu_clearLogStorage"
              android:title="@string/gamel_menu_logstore_clear"
              />
      </menu>
    </item>
</menu>
