<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <group android:id="@+id/group_done">
    <!-- title set in BoardActivity -->

    <item android:id="@+id/board_menu_archive"
          android:title="@string/button_archive"
          android:showAsAction="ifRoom"
          android:icon="@drawable/archive__gen"
          />
    <item android:id="@+id/board_menu_rematch"
          android:title="@string/button_rematch"
          android:showAsAction="ifRoom"
          android:icon="@drawable/rematch__gen"
          />
    <item android:id="@+id/board_menu_done"
          android:alphabeticShortcut="D"
          android:showAsAction="ifRoom"
          android:icon="@drawable/save__gen"
          />

    <item android:id="@+id/board_menu_trade"
          android:title="@string/board_menu_trade"
          android:alphabeticShortcut="T"
          android:showAsAction="ifRoom"
          android:icon="@drawable/ic_trade"
          />
  </group>

    <item android:id="@+id/board_menu_trade_commit"
          android:title="@string/button_trade_commit"
          android:showAsAction="ifRoom"
          android:icon="@drawable/save__gen"
          />

    <item android:id="@+id/board_menu_trade_cancel"
          android:title="@string/button_trade_cancel"
          android:showAsAction="ifRoom"
          android:icon="@drawable/untrade__gen"
          />

    <item android:id="@+id/board_menu_undo_last"
          android:title="@string/board_menu_undo_last"
          android:alphabeticShortcut="U"
          />

    <item android:id="@+id/board_menu_tray"
          />

    <item android:title="@string/board_submenu_game">
      <menu>
        <item android:id="@+id/board_menu_game_counts"
              android:title="@string/board_menu_game_counts" />
        <item android:id="@+id/board_menu_game_left"
              android:title="@string/board_menu_game_left" />
        <item android:id="@+id/board_menu_game_history"
              android:title="@string/board_menu_game_history" />
        <item android:id="@+id/board_menu_game_resign"
              android:title="@string/board_menu_game_resign" />
      </menu>
    </item>
    
    <item android:id="@+id/board_menu_study"
          android:title="@string/gamel_menu_study"
          />

    <item android:id="@+id/board_menu_file_prefs"
          android:title="@string/menu_prefs"
          android:alphabeticShortcut="P"
          />

    <item android:id="@+id/board_menu_game_netstats"
          android:title="@string/board_menu_game_netstats" />

    <item android:id="@+id/board_menu_game_pause"
          android:title="@string/board_menu_game_pause" />
    <item android:id="@+id/board_menu_game_unpause"
          android:title="@string/board_menu_game_unpause" />

</menu>
