<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  >
  <PreferenceCategory android:title="@string/prefs_names"
                      android:summary="@string/prefs_names_summary"
                      >

    <org.eehouse.android.xw4.XWEditTextPreference
        android:key="@string/key_player1_name"
        android:title="@string/pref_human_name"
        android:capitalize="words"
        android:defaultValue=""
        android:maxLines="1"
        android:maxLength="32"
        android:inputType="text"
        />
    <org.eehouse.android.xw4.XWEditTextPreference
        android:key="@string/key_robot_name"
        android:title="@string/robot_label"
        android:capitalize="words"
        android:defaultValue="@string/button_default_robot"
        android:maxLines="1"
        android:maxLength="32"
        android:inputType="text"
        />
  </PreferenceCategory>
</PreferenceScreen>
