<?xml version="1.0" encoding="utf-8"?>

<org.eehouse.android.xw4.ConfirmPauseView
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    >

  <TextView android:id="@+id/confirm_pause_expl"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            />

    <org.eehouse.android.xw4.EditWClear
        android:id="@+id/msg_edit"
        style="@style/edit_w_clear"
        android:hint="@string/pause_expl_hint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences|textMultiLine"
        android:layout_weight="1"
        android:scrollHorizontally="false"
        android:layout_marginTop="10sp"
        />

  <Spinner android:id="@+id/saved_msgs"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:drawSelectorOnTop="true"
           android:layout_marginTop="10sp"
           />

    <!-- android:hint="@string/pause_msg_hint" -->

      <LinearLayout android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
        <Button android:id="@+id/pause_save_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pause_save_msg"
                />
        <Button android:id="@+id/pause_forget_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pause_forget_msg"
                />

      </LinearLayout>
</org.eehouse.android.xw4.ConfirmPauseView>
